--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,7 @@ include LICENSE
 include README.md
 include requirements.txt
 recursive-include src/pdf_annotation_extractor/locale *
+global-exclude __pycache__ *.py[co]
+prune build
+prune dist
+prune *.egg-info
